@@ -1,9 +1,16 @@
 plugins {
     id("java")
+    id("application")
 }
 
 group = "org.lab"
 version = "1.0-SNAPSHOT"
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(26)
+    }
+}
 
 repositories {
     mavenCentral()
@@ -15,6 +22,20 @@ dependencies {
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
+tasks.withType<JavaCompile>().configureEach {
+    options.compilerArgs.add("--enable-preview")
+    options.release = 26
+}
+
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--enable-preview")
+}
+
+application {
+    mainClass = "org.lab.Main"
+}
+
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs("--enable-preview")
 }
